[gd_scene load_steps=8 format=2]

[ext_resource path="res://Shape.tscn" type="PackedScene" id=1]
[ext_resource path="res://props.tres.gd" type="Script" id=2]
[ext_resource path="res://widget.rect.tscn" type="PackedScene" id=3]
[ext_resource path="res://widget.color.tscn" type="PackedScene" id=4]

[sub_resource type="GDScript" id=1]

script/source = "extends Tree

func _ready():
	refresh()


func refresh():
	
	clear()
	
	var root = create_item()
	
	for thing in get_tree().get_nodes_in_group(\"canvas\")[0].get_children():
		var thingitem = create_item(root)
		thingitem.set_text(0, thing.name)
		thingitem.set_metadata(0, thing)
		thingitem.select(0)
	

func _on_duplicate_pressed():
	if get_selected():
		global.grp(\"canvas\").add_child( get_selected().get_metadata(0).duplicate() )
		refresh()


func _on_free_pressed():
	global.grp(\"canvas\").add_child( get_selected().get_metadata(0).queue_free())
	refresh() #fixme: delay two frames? one for freeing the selected


func _on_add_pressed():
	var new_node = load(\"res://ColorRect.tscn\")
#	var new_node = ColorRect.new()
#	new_node.rect_size = Vector2(50,50)
	global.grp(\"canvas\").add_child(new_node)
	refresh()
"

[sub_resource type="GDScript" id=2]

script/source = "extends ColorPickerButton

signal color_edited(color)

func _ready():
	connect(\"color_changed\",self,\"color_changed\")
	
func color_changed(arg):
#	if $color.get_popup().visible:
		emit_signal(\"color_edited\", arg)
"

[sub_resource type="GDScript" id=3]

script/source = "extends HBoxContainer

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	for window in get_children():
		window.show()

#func _process(delta):
#	# Called every frame. Delta is time since last frame.
#	# Update game logic here.
#	pass
"

[node name="world" type="Node"]

[node name="canvas" type="Control" parent="." groups=[
"canvas",
]]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Shape" parent="canvas" instance=ExtResource( 1 )]

[node name="Trees" type="Panel" parent="."]
anchor_bottom = 1.0
margin_right = 208.0
rect_min_size = Vector2( 16, 16 )

[node name="Tree" type="Tree" parent="Trees" groups=[
"tree",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -5.0
margin_bottom = -85.0
custom_constants/vseparation = 20
hide_root = true
select_mode = 2
script = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Trees"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -79.0
margin_right = 1.0
custom_constants/separation = 0

[node name="free" type="Button" parent="Trees/HBoxContainer"]
margin_right = 69.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "-"

[node name="duplicate" type="Button" parent="Trees/HBoxContainer"]
margin_left = 69.0
margin_right = 138.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "x2"

[node name="add" type="Button" parent="Trees/HBoxContainer"]
margin_left = 138.0
margin_right = 209.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+"

[node name="Props" type="Panel" parent="." groups=[
"props",
]]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -263.0
margin_right = -2.0
rect_min_size = Vector2( 16, 16 )
script = ExtResource( 2 )

[node name="close" type="Button" parent="Props"]
margin_left = 254.0
margin_top = -7.0
margin_right = 274.0
margin_bottom = 13.0
rect_rotation = 44.9999
text = "+"
flat = true

[node name="rect" parent="Props" instance=ExtResource( 3 )]
margin_left = 82.0
margin_top = 68.0
margin_right = 248.0
margin_bottom = 213.0

[node name="move_down" type="Button" parent="Props"]
margin_left = 40.0
margin_top = 183.0
margin_right = 88.0
margin_bottom = 231.0

[node name="move_up" type="Button" parent="Props"]
margin_left = 18.0
margin_top = 162.0
margin_right = 65.0
margin_bottom = 209.0

[node name="name" type="LineEdit" parent="Props"]
margin_left = 17.0
margin_top = 10.0
margin_right = 245.0
margin_bottom = 61.0
align = 1
placeholder_text = "name"
caret_blink = true
caret_blink_speed = 0.5

[node name="rotation" type="VSlider" parent="Props"]
margin_left = 11.0
margin_top = 299.0
margin_right = 72.0
margin_bottom = 543.0
rect_rotation = -89.9999
min_value = -180.0
max_value = 180.0
step = 0.0

[node name="randomize" type="Button" parent="Props"]
margin_left = 13.0
margin_top = 68.0
margin_right = 63.0
margin_bottom = 114.0
text = "\\*/"

[node name="color" type="ColorPickerButton" parent="Props" groups=[
"prop",
]]
margin_left = 134.0
margin_top = 114.0
margin_right = 193.0
margin_bottom = 164.0
rect_min_size = Vector2( 50, 50 )
color = Color( 1, 1, 1, 1 )
script = SubResource( 2 )

[node name="Color2" parent="Props" instance=ExtResource( 4 )]
visible = false
margin_top = 147.0
margin_bottom = 400.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Props"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -291.0
margin_right = 2.0
margin_bottom = -235.0
custom_constants/separation = 0

[node name="free" type="Button" parent="Props/HBoxContainer2"]
margin_right = 87.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-"

[node name="duplicate" type="Button" parent="Props/HBoxContainer2"]
margin_left = 87.0
margin_right = 174.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "x2"

[node name="add" type="Button" parent="Props/HBoxContainer2"]
margin_left = 174.0
margin_right = 261.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 214.0
margin_top = -111.0
margin_right = -261.0
alignment = 1
script = SubResource( 3 )

[node name="WindowDialog" type="Panel" parent="HBoxContainer"]
margin_right = 180.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WindowDialog2" type="Panel" parent="HBoxContainer"]
margin_left = 184.0
margin_right = 364.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WindowDialog3" type="Panel" parent="HBoxContainer"]
margin_left = 368.0
margin_right = 549.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 50.0
align = 1
valign = 1

[connection signal="cell_selected" from="Trees/Tree" to="Props" method="_on_Tree_cell_selected"]
[connection signal="pressed" from="Trees/HBoxContainer/free" to="Trees/Tree" method="_on_free_pressed"]
[connection signal="pressed" from="Trees/HBoxContainer/duplicate" to="Trees/Tree" method="_on_duplicate_pressed"]
[connection signal="pressed" from="Trees/HBoxContainer/add" to="Trees/Tree" method="_on_add_pressed"]
[connection signal="pressed" from="Props/close" to="Props" method="_on_randomize2_pressed"]
[connection signal="changed_rect" from="Props/rect" to="Props" method="_on_rect_changed_rect"]
[connection signal="pressed" from="Props/move_down" to="Props" method="_on_move_down_pressed"]
[connection signal="pressed" from="Props/move_up" to="Props" method="_on_move_up_pressed"]
[connection signal="text_changed" from="Props/name" to="Props" method="_on_name_text_changed"]
[connection signal="value_changed" from="Props/rotation" to="Props" method="_on_rotation_value_changed"]
[connection signal="pressed" from="Props/randomize" to="Props" method="_on_randomize_pressed"]
[connection signal="color_edited" from="Props/color" to="Props" method="_on_color_color_edited"]
[connection signal="pressed" from="Props/HBoxContainer2/free" to="Props" method="_on_free_pressed"]
[connection signal="pressed" from="Props/HBoxContainer2/duplicate" to="Props" method="_on_duplicate_pressed"]
[connection signal="pressed" from="Props/HBoxContainer2/add" to="Props" method="_on_add_pressed"]
